抛出权限异常

--- a/boot-sample-validation/pom.xml
+++ b/boot-sample-validation/pom.xml
@@ -15,6 +15,10 @@
             <groupId>com.cngc.boot</groupId>
             <artifactId>boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cngc.boot</groupId>
+            <artifactId>boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
