--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>boot-sample-dictionary</module>
         <module>boot-sample-validation</module>
+        <module>boot-sample-log</module>
     </modules>
     <parent>
         <groupId>com.cngc.boot</groupId>
