--- a/boot-sample-log/pom.xml
+++ b/boot-sample-log/pom.xml
@@ -19,6 +19,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cngc.boot</groupId>
+            <artifactId>boot-integration-r1-portal</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+        </dependency>
     </dependencies>
 
 
