--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>boot-sample-dictionary</module>
         <module>boot-sample-validation</module>
         <module>boot-sample-log</module>
+        <module>boot-sample-jpa</module>
     </modules>
     <parent>
         <groupId>com.cngc.boot</groupId>
