--- a/boot-sample-dictionary/src/main/resources/application.yml
+++ b/boot-sample-dictionary/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     allow-bean-definition-overriding: true
   jackson:
     property-naming-strategy: SNAKE_CASE
+    time-zone: Asia/Shanghai
 
 logging:
   level:
