--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,21 @@
     <modules>
         <module>boot-sample-dictionary</module>
         <module>boot-sample-validation</module>
-        <module>boot-sample-log</module>
+<!--        <module>boot-sample-log</module>-->
         <module>boot-sample-jpa</module>
-        <module>boot-sample-admin</module>
+<!--        <module>boot-sample-admin</module>-->
     </modules>
     <parent>
         <groupId>com.cngc.boot</groupId>
         <artifactId>boot-starter-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>boot-samples</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
